Add some unit tests, fix bugs

--- a/UnitTest_For_Project_2/UnitTest_For_Project_2.vcxproj
+++ b/UnitTest_For_Project_2/UnitTest_For_Project_2.vcxproj
@@ -164,6 +164,11 @@
     </ClCompile>
     <ClCompile Include="unittest1.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Project2\Project2.vcxproj">
+      <Project>{d61304d5-8b92-469e-91f7-0843b110698b}</Project>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
