--- a/Project_2/Project_2.vcxproj.filters
+++ b/Project_2/Project_2.vcxproj.filters
@@ -26,10 +26,10 @@
     <ClCompile Include="pch.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Project2.cpp">
+    <ClCompile Include="LinkedList.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="LinkedList.cpp">
+    <ClCompile Include="Project_2.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
