--- a/Course_work/Course_work.vcxproj
+++ b/Course_work/Course_work.vcxproj
@@ -151,13 +151,13 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="CommitsData.h" />
+    <ClInclude Include="CommitsRaid.h" />
     <ClInclude Include="CommitsUtils.h" />
     <ClInclude Include="pch.h" />
-    <ClInclude Include="StringUtils.h" />
+    <ClInclude Include="Menu.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="CommitsData.cpp" />
+    <ClCompile Include="CommitsRaid.cpp" />
     <ClCompile Include="CommitsUtils.cpp" />
     <ClCompile Include="Course_work.cpp" />
     <ClCompile Include="pch.cpp">
@@ -166,7 +166,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
-    <ClCompile Include="StringUtils.cpp" />
+    <ClCompile Include="Menu.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
