--- a/Course_work/Course_work.vcxproj.filters
+++ b/Course_work/Course_work.vcxproj.filters
@@ -18,13 +18,13 @@
     <ClInclude Include="pch.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="CommitsData.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="CommitsUtils.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="StringUtils.h">
+    <ClInclude Include="Menu.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="CommitsRaid.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
@@ -35,13 +35,13 @@
     <ClCompile Include="Course_work.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="CommitsData.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="CommitsUtils.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="StringUtils.cpp">
+    <ClCompile Include="Menu.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="CommitsRaid.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
